k8s/n8n.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-deployment
  namespace: 4team
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: n8n
          image: n8nio/n8n:latest
          ports:
            - containerPort: 5678
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "0.3"
              memory: "512Mi"
          volumeMounts:
            - name: n8n-data
              mountPath: /home/node/.n8n
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: 4team
spec:
  type: ClusterIP
  ports:
    - port: 5678
      targetPort: 5678
  selector:
    app: n8n
