k8s/redis-stack.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-stack-deployment
  namespace: 4team
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-stack
  template:
    metadata:
      labels:
        app: redis-stack
    spec:
      containers:
        - name: redis-stack
          image: redis/redis-stack-server:latest
          ports:
            - containerPort: 6379
          # 외부에 노출되는 포트는 6380으로 매핑되지만, 컨테이너 내부는 6379로 동작
---
apiVersion: v1
kind: Service
metadata:
  name: redis-stack-service
  namespace: 4team
spec:
  type: ClusterIP
  ports:
    - port: 6380
      targetPort: 6379
  selector:
    app: redis-stack
